--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Introducción JS</title>
+
+    
+
 </head>
 <body>
     <h1>Hola mundo</h1>
+
+    <script>
+        alert("¡Hola, mundo!");
+    </script>
+
+
+    <script src="./public/js/script.js"></script>
 </body>
 </html>
