Nueva versión usando la funcion saludar

--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 </head>
 <body>
     <h1>Hola mundo</h1>
-
-    <script>
-        alert("¡Hola, mundo!");
-    </script>
+    <h2 id="mostrar_saludo"></h2>
+    <button id="btn_saludar" onclick="saludar()">Saludar</button>
 
 
     <script src="./public/js/script.js"></script>
